--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: apt-get install -y libclang-dev
       - run:
           name: Install bindgen with cargo
-          command: cargo install bindgen
+          command: cargo install bindgen-cli
 #      - run:
 #          name: Install tkinter with apt-get
 #          command: apt-get install -y python3-tk
