--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
-VERSION
-REVISION
-
-# build files
-__pycache__
 *.o
-
-# tests
-code-experiments/test/example-test
+.*.pyc
+.*\.orig
+.*\.swp
+REVISION
+VERSION
+__pycache__
+code-experiments/build/*/coco.[ch]
+code-experiments/build/c/Makefile
+code-experiments/build/c/example_experiment
+code-experiments/examples/*/coco.[ch]
+code-experiments/test/*/coco.[ch]
+code-experiments/test/integration-test/Makefile
+code-experiments/test/integration-test/bbob2009_testcases.txt
+code-experiments/test/integration-test/bbob2009_testcases2.txt
+code-experiments/test/integration-test/test_bbob-constrained
+code-experiments/test/integration-test/test_bbob-largescale
+code-experiments/test/integration-test/test_bbob-mixint
+code-experiments/test/integration-test/test_biobj
+code-experiments/test/integration-test/test_coco
+code-experiments/test/integration-test/test_instance_extraction
+code-experiments/test/example-test/
