--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,21 +11,21 @@ on:
   pull_request:
     branches: [ master, development ]
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        build_type: [Release, Debug]
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{matrix.os}}
     steps:
-    - uses: actions/checkout@v2
-
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
     - name: Build C amalgamation
       run: python ${{github.workspace}}/do.py amalgamate-c
-      
     - name: Configure CMake
-      run: cmake -S ${{github.workspace}}/code-experiments/build/c/ -B ${{github.workspace}}/code-experiments/build/c/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
+      run: cmake -S ${{github.workspace}}/code-experiments/build/c/ -B build/ -DCMAKE_BUILD_TYPE=${{matrix.build_type}}
     - name: Build
-      run: cmake --build ${{github.workspace}}/code-experiments/build/c/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build build/ --config ${{matrix.build_type}}
