--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,5 +26,6 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: ${{matrix.version}}
-    - run: pip install numpy scipy cython
+        cache: "pip"
+    - run: pip install -r ${{github.workspace}}/code-experiments/build/python/requirements.txt
     - run: python ${{github.workspace}}/do.py verbose run-python --user and-test          
