--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,11 +21,14 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     runs-on: ${{matrix.os}}
+    defaults:
+      run:
+        working-directory: ${{github.workspace}}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
         python-version: ${{matrix.version}}
         cache: "pip"
-    - run: pip install -r ${{github.workspace}}/code-experiments/build/python/requirements.txt
-    - run: python ${{github.workspace}}/do.py verbose run-python --user and-test          
+    - run: pip install -r code-experiments/build/python/requirements.txt
+    - run: python do.py verbose run-python --user and-test
