Need fetch-depth: 0 to fetch tags.

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,6 +23,8 @@ jobs:
         working-directory: ${{github.workspace}}
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
         python-version: ${{matrix.version}}
