--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,9 +20,9 @@ init:
 install:
   # - cmd: conda install -y matplotlib numpy scipy setuptools six pytest cython
   # Upgrade pip before we start installing packages
-  - cmd: python -m pip install --upgrade pip
+  - cmd: python -m pip install --upgrade pip "setuptools>=61.0"
   - cmd: pip install matplotlib --ignore-installed # use pip because conda install numpy fails with Python != 3.6
-  - cmd: pip install numpy scipy setuptools six pytest cython 
+  - cmd: pip install numpy scipy six pytest cython
   - cmd: python do.py run-python install-user
   - cmd: python do.py install-postprocessing
 
