--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,6 +11,10 @@ on:
   pull_request:
     branches: [ master, development ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   run:
     strategy:
