Revamp build infrastructure
In particular this huge commit:

1. Replaces the versioning code. Instead of exapnding the
   the version number into templates, write it into seperate
   files for each language binding.

2. Update build infrastructure of Python packages to use
   pyproject.toml instead of old setup.py based build. Version
   information is derived from a _version.py file that is built
   by do.py at amalgamation time.

3. Use python -m build to build source (sdist) and wheel files
   instead of eggs.

4. Use pip install to install python packages locally

5. Simplify directory layout of source cocoex package.

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -20,10 +20,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
-    - run: pip install meson ninja
+        python-version: '3.10'
+    - run: pip install click meson ninja
     - run: python ${{github.workspace}}/do.py amalgamate-c
     - run: meson setup builddir/ ${{github.workspace}}/code-experiments/build/c/
       env:
@@ -39,11 +41,13 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
+        python-version: '3.10'
     - run: brew install gcc
-    - run: pip install meson ninja
+    - run: pip install click meson ninja
     - run: python ${{github.workspace}}/do.py amalgamate-c
     - run: meson setup builddir/ ${{github.workspace}}/code-experiments/build/c/
       env:
@@ -59,10 +63,12 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
-    - run: pip install meson ninja
+        python-version: '3.10'
+    - run: pip install click meson ninja
     - run: python ${{github.workspace}}/do.py amalgamate-c
     - run: meson setup builddir/ ${{github.workspace}}/code-experiments/build/c/
       env:
