--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,9 +25,12 @@ jobs:
     runs-on: ${{matrix.os}}
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+    - run: pip install click
     - name: Build C amalgamation
       run: python ${{github.workspace}}/do.py amalgamate-c
     - name: Configure CMake
