--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,9 +27,12 @@ jobs:
         working-directory: ${{github.workspace}}
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
         python-version: ${{matrix.version}}
         cache: "pip"
+    - run: pip install click
     - run: pip install -r code-experiments/build/python/requirements.txt
-    - run: python do.py verbose run-python --user and-test
+    - run: python do.py test-python
