--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ VERSION
 __pycache__
 *.egg-info/
 .vscode/*
-
+*.info
+*.*dat
 
 code-experiments/build/*/coco.[ch]
 code-experiments/build/c/Makefile
@@ -26,6 +27,7 @@ code-experiments/test/integration-test/test_bbob-mixint
 code-experiments/test/integration-test/test_biobj
 code-experiments/test/integration-test/test_coco
 code-experiments/test/integration-test/test_instance_extraction
+code-experiments/test/regression-test/data/
 
 code-postprocessing/build/
 code-postprocessing/dist/
