--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ code-experiments/test/integration-test/test_biobj
 code-experiments/test/integration-test/test_coco
 code-experiments/test/integration-test/test_instance_extraction
 code-experiments/test/regression-test/data/
+code-experiments/test/regression-test/regression-test-bbob-noisy/
 
 code-postprocessing/build/
 code-postprocessing/dist/
+
+data/*
