--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ code-experiments/test/integration-test/test_biobj
 code-experiments/test/integration-test/test_coco
 code-experiments/test/integration-test/test_instance_extraction
 code-experiments/test/regression-test/data/
-code-experiments/test/regression-test/regression-test-bbob-noisy/
+code-experiments/test/regression-test/regression-test-bbob-noisy/data/*.txt
+code-experiments/test/regression-test/regression-test-bbob-noisy/data_legacy/*.json
 
 code-postprocessing/build/
 code-postprocessing/dist/
