Solved issue with Griewank-Rosenbrock and Ellipsoid function
Basically there were some parameters of the objective functions that were passed as variables or literals
and were supposed to be different across the noisy and the noise free implementation, according to the
legacy code

Example.: Default conditioning for ellipsoid was 1.0e6, which is correct for the noise free functions
but not for the noisy version, since for the legacy code the conditioning of noisy problem was just 1.0e4.
There was a similar issue with the Griewank-Rosenbrock function.

This modifications required slightly ones also in the other suites calling the allocators for those functions (to be able to pass them the correct value of the argument).
Hopefully, these modifications should not alterate the already existing behaviour of the other suites, but we'll see when the tests done at commit time are done.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ code-experiments/test/integration-test/test_instance_extraction
 code-experiments/test/regression-test/data/
 code-experiments/test/regression-test/regression-test-bbob-noisy/data/*.txt
 code-experiments/test/regression-test/regression-test-bbob-noisy/data_legacy/*.json
+code-experiments/test/regression-test/regression-test-bbob-noisy/results/
+
 
 code-postprocessing/build/
 code-postprocessing/dist/
